--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!doctype html>
 <html lang="it">
 <head>
+  <link rel="icon" href="favicon.png">
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Icone Tonde</title>
   <style>
-    :root { --bg:#0f172a; --panel:#111827; --text:#ffd54a; }
+    :root { --bg:#0f172a; --panel:#111827; --muted:#ffd54a; --accent:#22c55e; --text:#ffd54a; }
 
     html, body {
       margin:0;
@@ -32,43 +33,59 @@
       flex-shrink:0;
     }
 
+    /* LOGO */
     .logo-top {
-      width:150px;
+      width:70px;              /* << qui cambi dimensione logo */
+      height:auto;
       display:block;
-      margin:6px auto 1px auto;
+      margin:6px auto 4px auto; /* ultimo valore = spazio sotto il logo */
       flex-shrink:0;
     }
 
-    /* CONTENUTO CENTRALE */
+    /* AREA CENTRALE CENTRATA */
     .center-area{
       flex:1;
       display:flex;
-      justify-content:center;   /* CENTRATO ORIZZONTALE */
-      align-items:center;       /* CENTRATO VERTICALE */
-      padding:0px;
+      justify-content:center;
+      align-items:center;
+      padding:4px;             /* riduci/aumenti per alzare/abbassare la card */
       box-sizing:border-box;
       overflow:hidden;
+    }
+
+    .wrap{
+      width:100%;
+      max-width:480px;
+      padding:0;
+      box-sizing:border-box;
+      display:flex;
+      justify-content:center;
     }
 
     .card{
       background:var(--panel);
       border:1px solid #1f2937;
       border-radius:16px;
-      width:100%;
-      max-width:480px;
-      padding:12px;
+      padding:12px 14px 6px;
       box-shadow:0 10px 30px rgba(0,0,0,.35);
       display:flex;
       flex-direction:column;
-      gap:10px;
+      width:100%;
       box-sizing:border-box;
+      gap:8px;
     }
 
     h1{
       font-size:18px;
-      margin:0;
+      margin:0 0 4px;
       color:var(--text);
       text-align:center;
+    }
+
+    .grid{
+      display:flex;
+      flex-direction:column;
+      gap:8px;
     }
 
     .pane{
@@ -76,35 +93,90 @@
       border:1px solid #1e293b;
       border-radius:14px;
       padding:10px;
+      display:flex;
+      flex-direction:column;
+      box-sizing:border-box;
+    }
+
+    .pane h3{
+      margin:0 0 6px;
+      font-size:14px;
+      color:var(--text);
       text-align:center;
+    }
+
+    .preview-wrap{
+      display:flex;
+      justify-content:center;
+      align-items:center;
     }
 
     canvas{
       width:260px;
       height:260px;
+      max-width:100%;
       background:#020617;
       border-radius:14px;
       border:1px solid #1e293b;
     }
 
+    .controls label{font-size:12px;color:var(--text)}
+    .row{
+      display:flex;
+      gap:8px;
+      align-items:center;
+      margin:4px 0;
+    }
+    .row input[type="range"]{width:100%}
+
+    .btns{
+      display:flex;
+      flex-wrap:wrap;
+      gap:6px;
+      margin:6px 0 0;
+      justify-content:center;
+    }
+
+    button{
+      background:#0f766e;
+      border:1px solid #115e59;
+      color:var(--text);
+      border-radius:10px;
+      padding:6px 10px;
+      cursor:pointer;
+      font-weight:600;
+      font-size:12px;
+    }
+
+    button.secondary{
+      background:#1f2937;
+      border-color:#334155;
+    }
+
+    button:disabled{opacity:.5;cursor:not-allowed}
+
     .drop{
       border:2px dashed #334155;
       border-radius:12px;
       padding:8px;
-      color:var(--text);
       text-align:center;
+      color:var(--text);
+    }
+    .drop.dragover{background:#0b1630}
+
+    .zoom-perc{
+      min-width:48px;
+      text-align:right;
+      font-variant-numeric:tabular-nums;
+      font-size:11px;
+      color:var(--text);
     }
 
-    .btns button{
-      padding:6px 10px;
-      font-size:12px;
-      border-radius:10px;
-      cursor:pointer;
-      font-weight:600;
-      background:#0f766e;
-      border:1px solid #115e59;
-      color:var(--text);
-      margin:4px;
+    .footer-note{
+      font-size:11px;
+      color:#93a1bb;
+      text-align:center;
+      margin-top:2px;
     }
 
     /* FOOTER */
@@ -121,43 +193,257 @@
 </head>
 <body>
 
-  <!-- BANNER -->
+  <!-- BANNER + LOGO -->
   <div class="banner">BENVENUTO</div>
-  <img src="logo.png" class="logo-top">
+  <img src="logo.png" class="logo-top" alt="Logo">
 
-  <!-- CONTENUTO CENTRATO -->
+  <!-- CONTENUTO -->
   <div class="center-area">
-    <div class="card">
+    <div class="wrap">
+      <div class="card">
+        <h1>Trasforma le tue foto</h1>
 
-      <h1>Trasforma le tue foto</h1>
+        <div class="grid">
+          <!-- Anteprima -->
+          <div class="pane">
+            <h3>Anteprima &amp; Ritaglio</h3>
+            <div class="preview-wrap">
+              <canvas id="preview" width="260" height="260" aria-label="Anteprima cerchio"></canvas>
+            </div>
+          </div>
 
-      <div class="pane">
-        <h3 style="color:var(--text);margin-top:0;">Anteprima & Ritaglio</h3>
-        <canvas id="preview" width="260" height="260"></canvas>
-      </div>
+          <!-- Carica immagine -->
+          <div class="pane">
+            <h3>Carica la tua immagine</h3>
+            <div class="drop" id="drop">
+              <input id="file" type="file" accept="image/*">
+            </div>
 
-      <div class="pane">
-        <h3 style="color:var(--text);margin-top:0;">Carica la tua immagine</h3>
-        <div class="drop" id="drop">
-          <input id="file" type="file" accept="image/*">
+            <div class="controls">
+              <div class="row">
+                <button id="zoomOut" type="button">−</button>
+                <!-- Slider logaritmico: 0..2 => fit..4× -->
+                <input id="zoom" type="range" min="0" max="2" step="0.01" value="0" disabled>
+                <button id="zoomIn" type="button">+</button>
+                <span id="zoomVal" class="zoom-perc">100%</span>
+              </div>
+            </div>
+
+            <div class="btns">
+              <button id="reset" class="secondary" disabled>Reset</button>
+              <button id="autoFit" class="secondary" disabled>Centra</button>
+              <button id="exportPNG" disabled>Esporta PNG (512×512)</button>
+            </div>
+          </div>
         </div>
 
-        <div class="btns">
-          <button id="reset" disabled>Reset</button>
-          <button id="autoFit" disabled>Centra</button>
-          <button id="exportPNG" disabled>Esporta PNG</button>
+        <div class="footer-note">
+          Trascina l'immagine o selezionala dal dispositivo.
         </div>
-      </div>
 
+      </div>
     </div>
   </div>
 
   <!-- FOOTER -->
   <div class="footer">MADE BY CIPOLLITTI GIOVANNI</div>
 
-<script>
-/* Il tuo JS rimane identico, nessuna modifica necessaria */
-</script>
+  <script>
+    // ===== Stato =====
+    const canvas = document.getElementById('preview');
+    const ctx = canvas.getContext('2d');
+    const fileInput = document.getElementById('file');
+    const drop = document.getElementById('drop');
+    const zoom = document.getElementById('zoom');
+    const zoomVal = document.getElementById('zoomVal');
+    const resetBtn = document.getElementById('reset');
+    const exportPNGBtn = document.getElementById('exportPNG');
+    const zoomInBtn = document.getElementById('zoomIn');
+    const zoomOutBtn = document.getElementById('zoomOut');
+    const autoFitBtn = document.getElementById('autoFit');
 
+    let img = new Image();
+    let loaded = false;
+    const state = { x: 0, y: 0, scale: 1, fit: 1 };
+
+    // ===== Utility =====
+    function updateScaleFromSlider(){
+      // slider 0..2 => scale = fit * 2^value  (log zoom)
+      state.scale = state.fit * Math.pow(2, zoom.valueAsNumber);
+      zoomVal.textContent = Math.round((state.scale/state.fit)*100) + '%';
+      draw();
+    }
+
+    function fitCenter(aggressive=false){
+      if (!loaded) return;
+      const W = canvas.width, H = canvas.height, R = Math.min(W, H) / 2;
+      const iw = img.naturalWidth, ih = img.naturalHeight;
+      const fit = Math.max((2*R)/iw, (2*R)/ih); // cover
+      state.fit = fit;
+      state.x = (W - iw*fit)/2;
+      state.y = (H - ih*fit)/2;
+      const base = aggressive ? 0.15 : 0;
+      zoom.min = 0;
+      zoom.value = base;
+      updateScaleFromSlider();
+    }
+
+    function draw(){
+      ctx.clearRect(0,0,canvas.width,canvas.height);
+      ctx.save();
+      const cx = canvas.width/2, cy = canvas.height/2, r = Math.min(cx, cy) - 2;
+      ctx.beginPath(); ctx.arc(cx, cy, r, 0, Math.PI*2); ctx.clip();
+      if (loaded) {
+        ctx.imageSmoothingEnabled = true;
+        ctx.drawImage(
+          img,
+          state.x, state.y,
+          img.naturalWidth*state.scale,
+          img.naturalHeight*state.scale
+        );
+      }
+      ctx.restore();
+      ctx.beginPath(); ctx.arc(cx, cy, r + 0.5, 0, Math.PI*2);
+      ctx.strokeStyle = '#ffd54a'; ctx.lineWidth = 1; ctx.stroke();
+    }
+
+    // ===== Drag per spostare =====
+    let dragging = false; let last = {x:0,y:0};
+    canvas.addEventListener('pointerdown', e=>{
+      if(!loaded) return;
+      dragging = true;
+      last={x:e.clientX,y:e.clientY};
+      canvas.setPointerCapture(e.pointerId);
+    });
+    canvas.addEventListener('pointermove', e=>{
+      if(!dragging) return;
+      const dx=e.clientX-last.x, dy=e.clientY-last.y;
+      last={x:e.clientX,y:e.clientY};
+      state.x+=dx;
+      state.y+=dy;
+      draw();
+    });
+    canvas.addEventListener('pointerup', ()=> dragging=false);
+    canvas.addEventListener('pointercancel', ()=> dragging=false);
+    canvas.addEventListener('dblclick', ()=> fitCenter(false));
+
+    // ===== Zoom (log) =====
+    zoom.addEventListener('input', updateScaleFromSlider);
+    zoomInBtn.addEventListener('click', ()=>{
+      if(!loaded) return;
+      zoom.value = Math.min(2, (zoom.valueAsNumber + 0.1));
+      updateScaleFromSlider();
+    });
+    zoomOutBtn.addEventListener('click', ()=>{
+      if(!loaded) return;
+      zoom.value = Math.max(0, (zoom.valueAsNumber - 0.1));
+      updateScaleFromSlider();
+    });
+
+    // ===== File loading =====
+    fileInput.addEventListener('change', handleFiles);
+    drop.addEventListener('dragover', e=>{
+      e.preventDefault();
+      drop.classList.add('dragover');
+    });
+    drop.addEventListener('dragleave', ()=> drop.classList.remove('dragover'));
+    drop.addEventListener('drop', e=>{
+      e.preventDefault();
+      drop.classList.remove('dragover');
+      const f = e.dataTransfer.files?.[0];
+      if (f) loadFile(f);
+    });
+
+    function handleFiles(e){
+      const f=e.target.files?.[0];
+      if(f) loadFile(f);
+    }
+
+    function loadFile(file){
+      const url = URL.createObjectURL(file);
+      img = new Image();
+      img.onload = ()=>{
+        loaded = true;
+        zoom.disabled=false;
+        resetBtn.disabled=false;
+        exportPNGBtn.disabled=false;
+        autoFitBtn.disabled=false;
+        fitCenter(false);
+        URL.revokeObjectURL(url);
+      };
+      img.onerror = ()=> alert('Immagine non valida.');
+      img.src = url;
+    }
+
+    resetBtn.addEventListener('click', ()=> fitCenter(false));
+    autoFitBtn.addEventListener('click', ()=>{
+      if(!loaded) return;
+      fitCenter(true);
+    });
+
+    // ===== Export helpers =====
+    function renderToSquare(size){
+      const out = document.createElement('canvas');
+      out.width = out.height = size;
+      const octx = out.getContext('2d');
+      const r = size/2 - 2;
+      const cx=size/2, cy=size/2;
+      octx.save();
+      octx.beginPath(); octx.arc(cx, cy, r, 0, Math.PI*2); octx.clip();
+      const scaleRatio = size / canvas.width;
+      octx.imageSmoothingEnabled = true;
+      octx.drawImage(
+        img,
+        state.x*scaleRatio,
+        state.y*scaleRatio,
+        img.naturalWidth*state.scale*scaleRatio,
+        img.naturalHeight*state.scale*scaleRatio
+      );
+      octx.restore();
+      octx.beginPath(); octx.arc(cx, cy, r + 0.5, 0, Math.PI*2);
+      octx.strokeStyle = '#ffd54a'; octx.lineWidth = 1; octx.stroke();
+      return out;
+    }
+
+    let currentButton = null;
+
+    async function exportSized(size, filename){
+      const btn = currentButton;
+      try {
+        if (btn) btn.disabled = true;
+        const out = renderToSquare(size);
+        await new Promise(res=>
+          out.toBlob(b=>{
+            downloadBlob(b, filename);
+            res();
+          }, 'image/png')
+        );
+      } finally {
+        if (btn) setTimeout(()=> btn.disabled = false, 300);
+      }
+    }
+
+    function downloadBlob(blob, filename){
+      const a = document.createElement('a');
+      const url = URL.createObjectURL(blob);
+      a.href = url;
+      a.download = filename;
+      document.body.appendChild(a);
+      a.click();
+      a.remove();
+      setTimeout(()=> URL.revokeObjectURL(url), 1000);
+    }
+
+    // ===== Export button =====
+    exportPNGBtn.addEventListener('click', async (e)=>{
+      if (!loaded) return;
+      currentButton = e.currentTarget;
+      await exportSized(512, 'icon.png');
+      currentButton=null;
+    });
+
+    // primo draw (vuoto)
+    draw();
+  </script>
 </body>
 </html>
